Fixed footer when on smaller screen

--- a/css/main.scss
+++ b/css/main.scss
@@ -25,20 +25,24 @@ $on-laptop:        800px;
     }
 }
 
-#header, #footer {
+#header {
     float: left;
     padding: 60px 0;
     width: 100%;
     max-width: none;
 }
 
-#header, #footer {
+#header {
     width: 100%;
     margin-left: auto;
     margin-right: auto;
     margin-top: 0;
     margin-bottom: 0;
     background-color: $title-bg-color;
+}
+
+#footer {
+  margin-bottom: 20px;
 }
 
 #header h1, #header h2, #header h3, #header h4, #header h5, #header h6 {
